[package]
name = "rust-pre-public-lib-template"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "A template for creating Rust pre-public libs."
homepage = "https://github.com/DenisGorbachev/rust-pre-public-lib-template"
repository = "https://github.com/DenisGorbachev/rust-pre-public-lib-template"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.json",
    "commitlint.config.mjs",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    "yolobox"
]

[package.metadata.details]
title = "Rust pre-public lib template"
tagline = ""
summary = ""
announcement = ""
readme = { generate = false }

[dependencies]
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
errgonomic = { git = "https://github.com/DenisGorbachev/errgonomic" }
fmt-derive = "0.1.2"
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
strum = { version = "0.27.1", features = ["derive"] }
stub-macro = { version = "0.1.3" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }

[package.metadata.cargo-machete]
ignored = [
    "derive-getters",
    "derive-new",
    "derive_more",
    "fmt-derive",
    "errgonomic",
    "standard-traits",
    "strum",
    "stub-macro",
    "subtype"
]
